updated the socket docs
